# TermedNet

./: CMakeLists.txt  Doxyfile  README.md
data/custom/: eight1.pgm  example2  example4  four1.pgm  nine1.pgm  one1.pgm  one2.pgm  seven1.pgm
docs/: Doxyfile  Doxyfile.bak
include/: CNN.h  Dataset.h  Logger.h  MLP.h  Network.h
src/: Dataset.cpp  MLP.cpp  Network.cpp  main.cpp
